# InceptionCL

./: .gitignore  CMakeLists.txt  README.md  cursestest.cpp  im.cpp
include/: convolution.cpp  convolution.hpp  misc.cpp  misc.hpp
